<resources>
    <string name="app_name">K-Estudiar</string>
    <string name="saludo">Hola</string>
    <string name="usuario">Mauro</string>
    <string name="bienvenida">Sabes Kestudiar? encuentra tu curso o carrera a medida</string>
    <string name="categorias">Categorías</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión o Registrarse</string>
    <string name="action_sign_in_short">Registrarse</string>
    <string name="welcome">"Bienvenid@!"</string>
    <string name="invalid_username">Nombre de usuario no válido</string>
    <string name="invalid_password">La contraseña debe tener más de 5 caracteres</string>
    <string name="login_failed">"Registro fallido"</string>
    <string name="e_mail">"E-mail"</string>
    <string name="contraseña">Contraseña</string>
    <string name="repetir_contraseña">Repetir contraseña</string>
    <string name="boton_registro">Registrarse</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
</resources>